--- a/rhg/Cargo.toml
+++ b/rhg/Cargo.toml
@@ -5,4 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.98"
+dirs = "6.0.0"
 glob = "0.3.2"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.8.23"
